ghc-4335c07/testsuite/tests/typecheck/should_fail/T13068.hs
module T13068 where
import T13068a
class C a where
    f :: a
