ghc-4335c07/testsuite/tests/typecheck/should_fail/T13068.stderr
[1 of 4] Compiling T13068[boot]     ( T13068.hs-boot, T13068.o-boot )
[2 of 4] Compiling T13068a          ( T13068a.hs, T13068a.o )

T13068a.hs:3:1: error:
    • Cannot define instance for abstract class ‘C’
    • In the instance declaration for ‘C Int’
